--- a/config/log4j.properties
+++ b/config/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=ERROR, didiConsole,logDailyFile,logFile
+log4j.rootLogger=DEBUG, didiConsole,logDailyFile,logFile
 
   
 #didiConsole  
@@ -6,16 +6,15 @@ log4j.appender.didiConsole=org.apache.log4j.ConsoleAppender
 log4j.appender.didiConsole.layout=org.apache.log4j.PatternLayout  
 log4j.appender.didiConsole.layout.ConversionPattern=%d [%c] - %m%n  
 
-
 #file
 log4j.appender.logFile=org.apache.log4j.FileAppender
 log4j.appender.logFile.Threshold=DEBUG
 log4j.appender.logFile.ImmediateFlush=true
 log4j.appender.logFile.Append=true
 
-log4j.appender.logFile.File=/data/logs/mylog.log
+#log4j.appender.logFile.File=/data/logs/mylog.log
 
-#log4j.appender.logFile.File=g:/mylog.txt
+log4j.appender.logFile.File=G:/mylog.txt
 
 #DailyFile
 log4j.appender.logDailyFile = org.apache.log4j.DailyRollingFileAppender 
@@ -30,7 +29,7 @@ log4j.appender.logDailyFile.Threshold =INFO
 log4j.appender.logDailyFile.ImmediateFlush = true 
 #shifouzhjuijia
 log4j.appender.logDailyFile.Append = true 
-#log4j.appender.logDailyFile.File = /data/logs/
+log4j.appender.logDailyFile.File = G:/logs.txt
 
 log4j.appender.logDailyFile.DatePattern = '.'yyyy-MM-dd'.log'  
 log4j.appender.logDailyFile.Encoding = UTF-8
