--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -97,17 +97,32 @@
 
 	</dependencies>
 
-	<build>
+ 	<build>
+ 	
+	<resources>
+			<resource>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**/*.properties</include>
+					<include>**/*.xml</include>
+				</includes>
+		<!-- 		是否替换资源中的属性 -->
+				<filtering>false</filtering>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
 
-		<finalName>di</finalName>
-		<plugins>
+				<includes>
+					<include>**/*.properties</include>
+					<include>**/*.xml</include>
+			
+				</includes>
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-			</plugin>
-		</plugins>
+				<filtering>true</filtering>
 
+			</resource>
+		</resources> 
+ 	
 	</build>
 
 </project>
