--- a/dao/src/main/resource/jdbc.properties
+++ b/dao/src/main/resource/jdbc.properties
@@ -1,11 +1,11 @@
 driver=com.mysql.jdbc.Drive
-#url=jdbc:mysql://597ed7b475fee.bj.cdb.myqcloud.com:3306/dididb
-#username=biyangang
-#password=Evun122018
+url=jdbc:mysql://rm-2ze5y9x4lhu9xy103o.mysql.rds.aliyuncs.com:3306/dididb
+username=biyangang
+password=Evun122018
 
-url=jdbc:mysql://rm-2zea4xn1r3j217m72do.mysql.rds.aliyuncs.com:3306/dididb
-username=didi
-password=Evunclub112017
+#url=jdbc:mysql://rm-2zea4xn1r3j217m72do.mysql.rds.aliyuncs.com:3306/dididb
+#username=didi
+#password=Evunclub112017
 
 initialSize=0
 maxActive=20
